# python-cve

./: .gitignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.js
.github/: dependabot.yml
.github/workflows/: pages.yml  update-cve-data.yml
public/: fonts.css
pythoncve/: __main__.py  advisory.py  cve.py  git.py  models.py  util.py  versions.py
src/: App.tsx  Controls.tsx  HighlightText.tsx  Overview.tsx  advisories.json  config.ts  index.css  main.tsx  manual_overrides.json  overview.json  types.ts  util.ts  vite-env.d.ts
test-data/: all-severities.advisories.json  all-severities.overview.json  critical-emergency.advisories.json  critical-emergency.overview.json  empty-state.overview.json  long-content.advisories.json  long-content.overview.json  safe-latest.advisories.json  safe-latest.overview.json  single-advisory.advisories.json  single-advisory.overview.json
tests/: conftest.py  test_cve.py  test_git.py  test_util.py  test_versions.py
